[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/InfoBook.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Inventory_Sheet.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CharacterSheet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/HUD/HudControl.gd" type="Script" id=4]
[ext_resource path="res://Scripts/HUD/Compass.gd" type="Script" id=5]
[ext_resource path="res://FontTheme.tres" type="Theme" id=6]
[ext_resource path="res://Graphics/GUI/Info_Book_B.png" type="Texture" id=7]
[ext_resource path="res://Graphics/GUI/Event_Log.png" type="Texture" id=8]
[ext_resource path="res://Graphics/GUI/TileFrame.png" type="Texture" id=9]
[ext_resource path="res://Graphics/GUI/CompasFrameuntitled.png" type="Texture" id=10]
[ext_resource path="res://Graphics/GUI/Compas.png" type="Texture" id=11]
[ext_resource path="res://Graphics/individual_16x16/icon057.png" type="Texture" id=12]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compas" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="Control" parent="Compas"]
margin_left = 19.8552
margin_top = 50.8925
margin_right = 19.8552
margin_bottom = 50.8925
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="TextureRect" parent="Compas/round"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -33.0
margin_right = 33.0
margin_bottom = 33.0
rect_min_size = Vector2( 66, 66 )
texture = ExtResource( 11 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Biome" type="TextureRect" parent="Compas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Terrain" type="TextureRect" parent="Compas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="Compas"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 180, 90 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="Hotbar_Item" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -48.0
margin_right = 232.0
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item1" type="TextureRect" parent="Hotbar_Item"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item1"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item2" type="TextureRect" parent="Hotbar_Item"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item3" type="TextureRect" parent="Hotbar_Item"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item3"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item4" type="TextureRect" parent="Hotbar_Item"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item4"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item5" type="TextureRect" parent="Hotbar_Item"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item5"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item6" type="TextureRect" parent="Hotbar_Item"]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item6"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item7" type="TextureRect" parent="Hotbar_Item"]
margin_left = 312.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item7"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item8" type="TextureRect" parent="Hotbar_Item"]
margin_left = 364.0
margin_right = 412.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item8"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item9" type="TextureRect" parent="Hotbar_Item"]
margin_left = 416.0
margin_right = 464.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Item" type="TextureRect" parent="Hotbar_Item/Item9"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Event_Log" type="TextureRect" parent="HUD"]
visible = false
margin_right = 400.0
margin_bottom = 200.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stat_Book" type="TextureRect" parent="HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 462.0
margin_bottom = 225.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hotbar_Ability" type="GridContainer" parent="HUD"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -372.0
margin_right = 92.0
margin_bottom = 48.0
rect_scale = Vector2( 0.8, 0.8 )
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability1" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability1"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability2" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability2"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability3" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability3"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability4" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability4"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability4"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability5" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 208.0
margin_right = 256.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability5"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability5"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability6" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 260.0
margin_right = 308.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability6"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability6"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability7" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 312.0
margin_right = 360.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability7"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability7"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability8" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 364.0
margin_right = 412.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability8"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability8"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability9" type="TextureRect" parent="HUD/Hotbar_Ability"]
margin_left = 416.0
margin_right = 464.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 9 )
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="HUD/Hotbar_Ability/Ability9"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num" type="Label" parent="HUD/Hotbar_Ability/Ability9"]
margin_left = 6.35681
margin_top = 27.546
margin_right = 12.3568
margin_bottom = 45.546
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Invenory" type="MarginContainer" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvSheet" type="Control" parent="Inventory"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory_Sheet" parent="Inventory/InvSheet" instance=ExtResource( 2 )]
anchor_left = 10.5925
anchor_top = 1.09602
anchor_right = 10.5925
anchor_bottom = 1.09602
margin_left = 0.707245
margin_top = 2.28882e-05
margin_right = 0.707245
margin_bottom = 2.28882e-05
rect_rotation = 2.69424
rect_scale = Vector2( 0.8, 0.8 )

[node name="CharSheet" type="Control" parent="Inventory"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSheet" parent="Inventory/CharSheet" instance=ExtResource( 3 )]
anchor_left = 1.41121
anchor_top = 7.42719
anchor_right = 1.41121
anchor_bottom = 7.42719
margin_left = 9.32112
margin_top = 0.292053
margin_right = 9.32112
margin_bottom = 0.292053
rect_rotation = -6.12669
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Button" type="Button" parent="Inventory"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
rect_scale = Vector2( 0.6, 0.6 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBook" parent="Inventory" instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = -1.0
margin_right = 5.0
margin_bottom = -1.0
rect_scale = Vector2( 0.7, 0.7 )

[node name="ChoiceBox" type="Control" parent="."]
visible = false
margin_left = 64.0
margin_right = 104.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ChoiceBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 304.0
margin_top = 221.432
margin_right = 596.0
margin_bottom = 280.432
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ChoiceBox/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.3568
margin_top = 3.43222
margin_right = 82.6432
margin_bottom = 21.4322
text = "Equip to left or Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="ChoiceBox/Panel"]
margin_left = 40.6432
margin_top = 32.0
margin_right = 140.643
margin_bottom = 64.0
text = "Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="ChoiceBox/Panel"]
margin_left = 192.643
margin_top = 32.0
margin_right = 292.643
margin_bottom = 64.0
text = "Right"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Inventory/Button" to="." method="_on_Button_pressed"]
